------------------------------------------------------------------------
rev 21:  (no author) | 2003-08-13 18:59:31 -0700 (Wed, 13 Aug 2003) | 5 lines

Added Documentation

Some of the TMtimeout bug has been fixed, module still works flawlessly, weither or not there are still timeouts on erroring sockets has not been concluded.


------------------------------------------------------------------------
rev 20:  (no author) | 2003-08-13 17:47:42 -0700 (Wed, 13 Aug 2003) | 2 lines

Bumped up PATCH level

------------------------------------------------------------------------
rev 19:  (no author) | 2003-08-13 17:47:03 -0700 (Wed, 13 Aug 2003) | 2 lines

Changed TODO, Added some comments to TCPMulti or somecrap I dont remember, added MANIFEST.SKIP for version generation.

------------------------------------------------------------------------
rev 18:  (no author) | 2003-08-13 17:30:50 -0700 (Wed, 13 Aug 2003) | 3 lines

Added pocoscan.pl, proof of concept and proof of working code.  Its probably not the best example to provide since it is in fact a proxy scanner, but whatever it execercises all features of the module and works perfectly, maintains a specific number of concurrent connections, and is indefinately more efficient than the ::Client::TCP version of the same code [ I suppose I should add that, I will after cleaning it up a little ].  With ::Client::TCP I could run about 50 concurrent connections without crashing my laptop...with ::Client::TCPMulti I can run about 450...wee!


------------------------------------------------------------------------
rev 17:  (no author) | 2003-08-13 17:28:32 -0700 (Wed, 13 Aug 2003) | 6 lines

Tons of bug fixes!

TONS!
